--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" />
+
+  <script src="node_modules/xterm/lib/xterm.js"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
 
   <title>Vite + React</title>
 
@@ -46,7 +50,9 @@
 
   <script type="module" src="/src/main.jsx"></script>
 
+  <script>
 
+  </script>
 </body>
 
 </html>
