frontend work complete for all lang

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 
   <script src="codemirror-5.65.16/addon/edit/trailingspace.js"></script>
 
+  <script src="codemirror-5.65.16/mode/clike/clike.js"></script>
+
+  <script src="codemirror-5.65.16/mode/python/python.js"></script>
 
 </head>
 
